; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/extr_hns3_enet.c_hns3_alloc_buffer.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/hisilicon/hns3/extr_hns3_enet.c_hns3_alloc_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hns3_enet_ring = type { i32 }
%struct.hns3_desc_cb = type { i32, i32, i32, i64, i64, %struct.page* }
%struct.page = type { i32 }

@ENOMEM = common dso_local global i32 0, align 4
@DESC_TYPE_PAGE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.hns3_enet_ring*, %struct.hns3_desc_cb*)* @hns3_alloc_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @hns3_alloc_buffer(%struct.hns3_enet_ring* %0, %struct.hns3_desc_cb* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.hns3_enet_ring*, align 8
  %5 = alloca %struct.hns3_desc_cb*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.page*, align 8
  store %struct.hns3_enet_ring* %0, %struct.hns3_enet_ring** %4, align 8
  store %struct.hns3_desc_cb* %1, %struct.hns3_desc_cb** %5, align 8
  %8 = load %struct.hns3_enet_ring*, %struct.hns3_enet_ring** %4, align 8
  %9 = call i32 @hns3_page_order(%struct.hns3_enet_ring* %8)
  store i32 %9, i32* %6, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call %struct.page* @dev_alloc_pages(i32 %10)
  store %struct.page* %11, %struct.page** %7, align 8
  %12 = load %struct.page*, %struct.page** %7, align 8
  %13 = icmp ne %struct.page* %12, null
  br i1 %13, label %17, label %14

14:                                               ; preds = %2
  %15 = load i32, i32* @ENOMEM, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %3, align 4
  br label %36

17:                                               ; preds = %2
  %18 = load %struct.page*, %struct.page** %7, align 8
  %19 = load %struct.hns3_desc_cb*, %struct.hns3_desc_cb** %5, align 8
  %20 = getelementptr inbounds %struct.hns3_desc_cb, %struct.hns3_desc_cb* %19, i32 0, i32 5
  store %struct.page* %18, %struct.page** %20, align 8
  %21 = load %struct.hns3_desc_cb*, %struct.hns3_desc_cb** %5, align 8
  %22 = getelementptr inbounds %struct.hns3_desc_cb, %struct.hns3_desc_cb* %21, i32 0, i32 4
  store i64 0, i64* %22, align 8
  %23 = load %struct.hns3_desc_cb*, %struct.hns3_desc_cb** %5, align 8
  %24 = getelementptr inbounds %struct.hns3_desc_cb, %struct.hns3_desc_cb* %23, i32 0, i32 3
  store i64 0, i64* %24, align 8
  %25 = load %struct.page*, %struct.page** %7, align 8
  %26 = call i32 @page_address(%struct.page* %25)
  %27 = load %struct.hns3_desc_cb*, %struct.hns3_desc_cb** %5, align 8
  %28 = getelementptr inbounds %struct.hns3_desc_cb, %struct.hns3_desc_cb* %27, i32 0, i32 2
  store i32 %26, i32* %28, align 8
  %29 = load %struct.hns3_enet_ring*, %struct.hns3_enet_ring** %4, align 8
  %30 = call i32 @hns3_page_size(%struct.hns3_enet_ring* %29)
  %31 = load %struct.hns3_desc_cb*, %struct.hns3_desc_cb** %5, align 8
  %32 = getelementptr inbounds %struct.hns3_desc_cb, %struct.hns3_desc_cb* %31, i32 0, i32 1
  store i32 %30, i32* %32, align 4
  %33 = load i32, i32* @DESC_TYPE_PAGE, align 4
  %34 = load %struct.hns3_desc_cb*, %struct.hns3_desc_cb** %5, align 8
  %35 = getelementptr inbounds %struct.hns3_desc_cb, %struct.hns3_desc_cb* %34, i32 0, i32 0
  store i32 %33, i32* %35, align 8
  store i32 0, i32* %3, align 4
  br label %36

36:                                               ; preds = %17, %14
  %37 = load i32, i32* %3, align 4
  ret i32 %37
}

declare dso_local i32 @hns3_page_order(%struct.hns3_enet_ring*) #1

declare dso_local %struct.page* @dev_alloc_pages(i32) #1

declare dso_local i32 @page_address(%struct.page*) #1

declare dso_local i32 @hns3_page_size(%struct.hns3_enet_ring*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
